--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -1,7 +1,3 @@
-
-
-
-
 .project-info {
     padding: 1rem;
 }
@@ -16,7 +12,6 @@
     margin-bottom: 0.5rem;
 }
 
-
 .music-links a {
     display: inline-block;
     margin-right: 0.5rem;
@@ -30,18 +25,16 @@
     color: #50372c;
 }
 
-
-
-
 .projects-section {
     background-color: #f5f1ec;
     color: #7a5040;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
 }
 
 .projects-title {
     font-size: 2.5rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
@@ -54,12 +47,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center; /* Adjusted for center alignment */
-    gap: 0.5rem;
+    gap: 1rem;
 }
 
 .project {
-    flex-basis: calc(33.333% - 1rem); /* Adjusted to fit 3 items per row */
-    max-width: calc(33.333% - 1rem); /* Same adjustment as flex-basis */
+    flex-basis: calc(30% - 1rem); /* Adjusted to fit 3 items per row */
+    max-width: calc(30% - 1rem); /* Same adjustment as flex-basis */
     margin: 0.5rem;
     background: #ffffff;
     border: 1px solid #ccc;
@@ -74,4 +67,5 @@
     border-radius: 50%; /* Circular shape */
     object-fit: cover; /* Ensures image covers the area without stretching */
     margin: 0 auto; /* Center the image within its container */
+    padding-top: 1.5rem
 }
