--- a/src/css/services.css
+++ b/src/css/services.css
@@ -8,7 +8,7 @@
 .service-container {
     max-width: 1200px;
     margin: auto;
-    padding: 20px;
+    padding: 12px;
     text-align: center;
     margin-bottom: 40px; 
 }
@@ -16,6 +16,7 @@
 .service-title {
     color: #7a5040; /* Dark Brown Text */
     font-size: 2.5rem;
+    margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
@@ -26,17 +27,18 @@
 }
 
 .service-link {
-    /*transition: background-color 0.3s ease;*/
     display: inline-block;
     text-decoration: none;
-    color: #7a5040; /* Same as the text color */
+    color: #7a5040; /* Text color */
     font-weight: bold;
     background-color: transparent;
-    border: 2px solid #7a5040;
-    padding: 0.5rem 1rem;
-    border-radius: 6px;
+    border: 2px solid #7a5040; /* Border color and thickness */
+    padding: 0.75rem 1.5rem; /* Increased padding for a larger button */
+    border-radius: 8px; /* Slightly larger border-radius */
+    font-size: 1.5rem; /* Increased font size for larger text */
     transition: all 0.3s ease-in-out;
 }
+
 
 
 .service-link:hover,
